--- a/interface/AdminInterface.html
+++ b/interface/AdminInterface.html
@@ -11,19 +11,19 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>                        
-        </button>
-        <a class="navbar-brand" href="#">WebSiteName</a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
         <!-- <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Edited Files<span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -36,7 +36,6 @@
         <li id="adduser" data-toggle="modal" data-target="#fileUpload"><a href="#">Upload New File</a></li>
         <li id="adduser" data-toggle="modal" ><a href="AdminFileManage.html">File Management</a></li>
         <li id="adduser" data-toggle="modal" ><a href="AdminInterface.html">User Management</a></li>
-        <li><a href="#"></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
@@ -67,11 +66,11 @@
         <td class="col-md-1">Admin</td>
         <td class="col-md-2">conan1@abc.com</td>
         <td class="col-md-4">
-        <div class="btn-toolbar" role="toolbar">
-          <button type="button" class="btn btn-primary">Edit</button>
-          <button type="button" class="btn btn-success">View Detail</button>
-          <button type="button" class="btn btn-danger">Delete Account</button>
-        </div>
+          <div class="btn-toolbar" role="toolbar">
+            <button type="button" class="btn btn-primary">Edit</button>
+            <button type="button" class="btn btn-success">View Detail</button>
+            <button type="button" class="btn btn-danger">Delete Account</button>
+          </div>
         </td>
       </tr>
       <tr>
@@ -82,29 +81,30 @@
        <td class="col-md-2">conan2@abc.com</td>
        <td class="col-md-4">
         <div class="btn-toolbar" role="toolbar">
-          <button type="button" class="btn btn-primary">Edit</button>
-          <button type="button" class="btn btn-success">View Detail</button>
-          <button type="button" class="btn btn-danger">Delete Account</button>
+            <button type="button" class="btn btn-primary">Edit</button>
+            <button type="button" class="btn btn-success">View Detail</button>
+            <button type="button" class="btn btn-danger">Delete Account</button>
         </div>
-      </td>
-    </tr>
-    <tr>
-     <td class="col-md-1">3</td>
-     <td class="col-md-1">conan3</td>
-     <td class="col-md-1">123</td>
-     <td class="col-md-1">Manager</td>
-     <td class="col-md-2">conan3@abc.com</td>
-     <td class="col-md-4">
-      <div class="btn-toolbar" role="toolbar">
-          <button type="button" class="btn btn-primary">Edit</button>
-          <button type="button" class="btn btn-success">View Detail</button>
-          <button type="button" class="btn btn-danger">Delete Account</button>
-        </div>
-    </td>
-  </tr>
-</tbody>
-</table>
+        </td>
+      </tr>
+      <tr>
+        <td class="col-md-1">3</td>
+        <td class="col-md-1">conan3</td>
+        <td class="col-md-1">123</td>
+        <td class="col-md-1">Manager</td>
+        <td class="col-md-2">conan3@abc.com</td>
+        <td class="col-md-4">
+          <div class="btn-toolbar" role="toolbar">
+            <button type="button" class="btn btn-primary">Edit</button>
+            <button type="button" class="btn btn-success">View Detail</button>
+            <button type="button" class="btn btn-danger">Delete Account</button>
+           </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
+
 <div class="modal fade" id="addUserForm" role="dialog">
   <div class="modal-dialog">
 
@@ -165,8 +165,32 @@
       
     </div>
   </div>
+</div>
+
 <div class="modal fade" id="fileUpload" role="dialog">
-  
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <form id="fileUpload" action="form.php" method="post">
+            <p>
+              <label for="nametag">Name</label>
+              <input type="text" name="nametag" size="20" />
+            </p>
+            <p>
+              <label for="myfile">File name</label>
+              <input type ="text" id="myfile" name="myfile" readonly="readonly" />
+              <a href="upload.php?placeValuesBeforeTB_=savedValues&TB_iframe=true&height=300&width=400&modal=true" class="thickbox">Upload</a>
+            </p>
+            <p style="text-align:right;"><input type="submit" name="Submit" value="Send" /></p>
+          </form>
+
+        </div>
+
+      </div>
+    </div>
 </div>
 </body>
 </html>
